--- a/domain.yml
+++ b/domain.yml
@@ -42,23 +42,6 @@ slots:
     type: unfeaturized
   elterngeld_residence:
     type: text
-    # values:
-    # - baden-württemberg
-    # - bayern
-    # - berlin
-    # - brandenburg
-    # - bremen
-    # - hamburg
-    # - hessen
-    # - mecklenburg-vorpommern
-    # - niedersachsen
-    # - nordrhein-westfalen
-    # - rheinland-pfalz
-    # - saarland
-    # - sachsen
-    # - sachsen-anhalt
-    # - schleswig-holstein
-    # - thüringen
   elterngeld_residence_link:
     type: unfeaturized
   elterngeld_samehousehold:
@@ -75,138 +58,138 @@ responses:
   - text: "Hallo, ich bin **Sonne**! \U0001F31E \n Ich kann Dich hier oder langfristig\
       \ auf WhatsApp über Themen rund um **Familienleistungen** informieren und beraten."
   utter_welcomeback:
-  - text: Hallo, schön, wieder von Dir zu hören 🌞
-  - text: Schön, dass Du wieder da bist 🌞
-  - text: Willkommen zurück 🌞
+  - text: "Hallo, schön, wieder von Dir zu hören 🌞"
+  - text: "Schön, dass Du wieder da bist 🌞"
+  - text: "Willkommen zurück 🌞"
   utter_welcomeback_time:
-  - text: Hey, nur noch **9** Wochen bis zum großen Tag! ✨
+  - text: "Hey, nur noch **9** Wochen bis zum großen Tag! ✨"
   utter_goodbye:
-  - text: Ok, dann bis zum nächsten Mal! 🌞
+  - text: "Ok, dann bis zum nächsten Mal! 🌞"
   utter_ask_continue:
-  - text: Tut mir leid, ich kann Dir gerade nicht ganz folgen. Möchtest Du weitermachen?
+  - text: "Tut mir leid, ich kann Dir gerade nicht ganz folgen. Möchtest Du weitermachen?"
   utter_im_here_4_u:
-  - text: Melde Dich gerne bei mir, wenn Du noch etwas brauchst 🌞
-  - text: Wenn Du trotzdem noch Fragen haben solltest, kannst Du sie mir jederzeit
-      stellen 🌞
-  - text: Das war es vorerst von mir. Wenn Du noch Fragen hast, melde Dich gerne.
+  - text: "Melde Dich gerne bei mir, wenn Du noch etwas brauchst 🌞"
+  - text: "Wenn Du trotzdem noch Fragen haben solltest, kannst Du sie mir jederzeit
+      stellen 🌞"
+  - text: "Das war es vorerst von mir. Wenn Du noch Fragen hast, melde Dich gerne."
   utter_hope_help:
-  - text: Alles klar. Ich hoffe, ich konnte Dir helfen 🌞
+  - text: "Alles klar. Ich hoffe, ich konnte Dir helfen 🌞"
   utter_whatsapp_offer:
   - buttons:
     - payload: /choose_whatsapp
-      title: Zu WhatsApp hinzufügen
-    text: Übrigens - Du kannst mich gerne auch auf WhatsApp hinzufügen. Dann kann
-      ich Dich im passenden Moment über weitere Familienleistungen und Fristen informieren💡
+      title: "Zu WhatsApp hinzufügen"
+    text: "Übrigens - Du kannst mich gerne auch auf WhatsApp hinzufügen. Dann kann
+      ich Dich im passenden Moment über weitere Familienleistungen und Fristen informieren💡"
   utter_whatsapp_contact:
-  - text: Gerne können wir über WhatsApp Kontakt halten - das ist ja auch etwas bequemer
+  - text: "Gerne können wir über WhatsApp Kontakt halten - das ist ja auch etwas bequemer
       als nur über die Website. Bitte füge mich unter [+49176...](https://wa.me/+4915228512776?text=hallo%20mutterschutz)
       zu Deinen Kontakten hinzu. Außerdem akzeptierst Du durch das Hinzufügen die
-      [WhatsApp-AGBs](https://www.whatsapp.com/legal/?lang=de&eea=0).
+      [WhatsApp-AGBs](https://www.whatsapp.com/legal/?lang=de&eea=0)."
   utter_ask_knowmore:
-  - text: Hast Du noch eine weitere Frage? Schreib sie mir gerne.
-  - text: Willst Du mehr darüber wissen? Du kannst mich auch etwas anderes fragen.
+  - text: "Hast Du noch eine weitere Frage? Schreib sie mir gerne."
+  - text: "Willst Du mehr darüber wissen? Du kannst mich auch etwas anderes fragen."
   utter_outofscope:
-  - text: 'Sorry, das kann ich Dir leider noch nicht beantworten. Ich habe auch noch
-      einiges zu lernen 🤓📚 '
-  - text: Das kann ich Dir leider noch nicht beantworten.
-  - text: Die Details dazu kenne ich leider noch nicht 🙈
+  - text: "Sorry, das kann ich Dir leider noch nicht beantworten. Ich habe auch noch
+      einiges zu lernen 🤓📚 "
+  - text: "Das kann ich Dir leider noch nicht beantworten."
+  - text: "Die Details dazu kenne ich leider noch nicht 🙈"
   utter_more_info:
-  - text: Du hast Dich zuletzt nach **Mutterschutz** erkundigt. Es gibt noch viele
-      weitere Familienleistungen, die für Dich relevant sein könnten.
+  - text: "Du hast Dich zuletzt nach **Mutterschutz** erkundigt. Es gibt noch viele
+      weitere Familienleistungen, die für Dich relevant sein könnten."
   utter_elterngeld_precise_general:
   - buttons:
     - payload: /choose_elterngeld_precise
-      title: Konkrete Frage
+      title: "Konkrete Frage"
     - payload: /choose_elterngeld_general
-      title: Allgemeine Infos
+      title: "Allgemeine Infos"
     text: Hast Du eine konkrete Frage zum **Elterngeld**? Oder soll ich Dir erstmal
       ein paar allgemeine Infos dazu geben?
   utter_ask_elterngeld_precisequestion:
-  - text: Dann stelle jetzt Deine Frage.
+  - text: "Dann stelle jetzt Deine Frage."
   utter_elterngeld_reply_outofscope:
-  - text: Mehr Infos zu **Elterngeld** findest Du auf dem [Familienportal](https://familienportal.de/familienportal/familienleistungen/elterngeld/faq).
-  - text: In der Zwischenzeit findest Du mehr Infos zum **Elterngeld** auf dem [🔗
-      Familienportal](https://familienportal.de/familienportal/familienleistungen/elterngeld/faq).
+  - text: "Mehr Infos zu **Elterngeld** findest Du auf dem [Familienportal](https://familienportal.de/familienportal/familienleistungen/elterngeld/faq)."
+  - text: "In der Zwischenzeit findest Du mehr Infos zum **Elterngeld** auf dem [🔗
+      Familienportal](https://familienportal.de/familienportal/familienleistungen/elterngeld/faq)."
   utter_elterngeld_inform:
-  - text: '**Elterngeld** ist eine Leistung, die Du vom Staat als Unterstützung erhalten
+  - text: "**Elterngeld** ist eine Leistung, die Du vom Staat als Unterstützung erhalten
       kannst, wenn Du nach der Geburt Deines Kindes gar nicht oder weniger arbeitest
-      🤓'
+      🤓"
   utter_ask_elterngeld_subtopic:
   - buttons:
     - payload: /choose_elterngeld_requirements
-      title: Voraussetzungen
+      title: "Voraussetzungen"
     - payload: /choose_elterngeld_application
-      title: Beantragung
+      title: "Beantragung"
     - payload: /choose_elterngeld_amount
-      title: Höhe
+      title: "Höhe"
     - payload: /choose_elterngeld_duration
-      title: Bezugsdauer
+      title: "Bezugsdauer"
     text: "Ich kann Dir jetzt mehr zu den **Voraussetzungen**, der **Beantragung**,\
       \ der **Höhe** oder der **Bezugsdauer** des **Elterngeldes** erzählen. \n Möchtest\
       \ Du zu einem dieser Themen mehr wissen?"
   utter_ask_elterngeld_situation:
   - buttons:
     - payload: /affirm
-      title: Ja
+      title: "Ja"
     - payload: /deny
-      title: Nein
+      title: "Nein"
     text: "Lass uns herausfinden, ob Du die **Voraussetzungen** erfüllst \U0001F50D\
       \  \n Kann ich Dir dafür ein paar Fragen zu Deiner Situation stellen?"
   utter_ask_elterngeld_care:
   - buttons:
     - payload: '/affirm{"elterngeld_care": "ja"}'
-      title: Ja
+      title: "Ja"
     - payload: '/deny{"elterngeld_care": "nein"}'
-      title: Nein
-    text: 'Ok, erste Frage. Wirst Du Dein Kind selbst betreuen? 👶 '
+      title: "Nein"
+    text: "Ok, erste Frage. Wirst Du Dein Kind selbst betreuen? 👶 "
   utter_ask_elterngeld_samehousehold:
   - buttons:
     - payload: '/affirm{"elterngeld_samehousehold": "ja"}'
-      title: Ja
+      title: "Ja"
     - payload: '/deny{"elterngeld_samehousehold": "nein"}'
-      title: Nein
-    text: Ok, wirst Du mit Deinem Kind in einem Haushalt leben? 🏘️
+      title: "Nein"
+    text: "Ok, wirst Du mit Deinem Kind in einem Haushalt leben? 🏘️"
   utter_ask_elterngeld_workparttime:
   - buttons:
     - payload: '/affirm{"elterngeld_workparttime": "ja"}'
-      title: Ja
+      title: "Ja"
     - payload: '/deny{"elterngeld_workparttime": "nein"}'
-      title: Nein
-    text: Wirst Du nach der Geburt weniger als 30 Stunden in der Woche arbeiten?🕰️
+      title: "Nein"
+    text: "Wirst Du nach der Geburt weniger als 30 Stunden in der Woche arbeiten?🕰️"
   utter_ask_elterngeld_residence:
-  - text: 'Letzte Frage: In welchem Bundesland lebst Du? Wenn Du nicht in Deutschland
-      lebst, antworte bitte mit **Ausland** 📍'
+  - text: "Letzte Frage: In welchem Bundesland lebst Du? Wenn Du nicht in Deutschland
+      lebst, antworte bitte mit **Ausland** 📍"
   utter_elterngeld_affirm_prerequisites:
-  - text: Super, Du erfüllst die Voraussetzungen für das Elterngeld! 🎉
+  - text: "Super, Du erfüllst die Voraussetzungen für das Elterngeld! 🎉"
   utter_ask_elterngeld_furthertopic:
   - buttons:
     - payload: /choose_elterngeld_application
-      title: Beantragung
+      title: "Beantragung"
     - payload: /choose_elterngeld_amount
-      title: Höhe
+      title: "Höhe"
     - payload: /choose_elterngeld_duration
-      title: Bezugsdauer
-    text: Soll ich Dir sonst noch etwas zu **Beantragung**, **Höhe** oder **Bezugsdauer**
-      von Elterngeld erklären?
+      title: "Bezugsdauer"
+    text: "Soll ich Dir sonst noch etwas zu **Beantragung**, **Höhe** oder **Bezugsdauer**
+      von Elterngeld erklären?"
   utter_elterngeld_inform_prerequisites:
   - text: "Du musst die folgenden Voraussetzungen erfüllen, um **Elterngeld** beziehen\
       \ zu können. \n - Du lebst in Deutschland. \n - Du wohnst mit Deinem Kind zusammen.\
       \ \n - Du betreust Dein Kind selbst. \n - Du arbeitest höchstens 30 Stunden\
       \ pro Woche."
   utter_elterngeld_application_link:
-  - text: Da Du in {elterngeld_residence} wohnst, kannst Du den Elterngeldantrag
+  - text: "Da Du in {elterngeld_residence} wohnst, kannst Du den Elterngeldantrag
       [🔗 hier]({elterngeld_residence_link})
       digital ausfüllen. Anschließend musst Du ihn ausdrucken und an Deine Elterngeldstelle
-      schicken. Deine Elterngeldstelle findest Du [🔗 hier](https://familienportal.de/action/familienportal/125008/action/suche).
+      schicken. Deine Elterngeldstelle findest Du [🔗 hier](https://familienportal.de/action/familienportal/125008/action/suche)."
   
 
   # mutterschutz
   utter_ask_mutterschutz_question:
   - buttons:
     - payload: /choose_mutterschutz_general
-      title: Was ist Mutterschutz?
-    - payload: /choose_whatsapp
-      title: WhatsApp
+      title: "Was ist Mutterschutz?"
+    # - payload: /choose_whatsapp
+    #   title: WhatsApp
     text: "Es sieht aus, als hast Du Dich gerade mit dem Thema **Mutterschutz** beschäftigt.\
       \ \n Wähle eine Beispielfrage aus oder schreib' mir direkt Deine Frage."
   utter_mutterschutz_differencereply:
@@ -214,50 +197,49 @@ responses:
       \ Arbeitnehmerinnen. \n Die **Mutterschutzfrist** hingegen ist ein Zeitraum\
       \ vor und nach der Geburt, in dem die Arbeitnehmerin nicht arbeiten darf \U0001F913"
   utter_mutterschutz_periodreply:
-  - text: Der Zeitraum beginnt **6 Wochen vor** dem errechneten Geburtstermin und
-      endet üblicherweise **8 Wochen nach** der Geburt 📅
+  - text: "Der Zeitraum beginnt **6 Wochen vor** dem errechneten Geburtstermin und
+      endet üblicherweise **8 Wochen nach** der Geburt 📅"
   utter_mutterschutz_reply_outofscope:
-  - text: Das kann ich Dir leider noch nicht beantworten. Mehr Infos zu **Mutterschutz**
-      findest Du auf dem [Familienportal](https://familienportal.de/familienportal/familienleistungen/mutterschutz).
+  - text: "Das kann ich Dir leider noch nicht beantworten. Mehr Infos zu **Mutterschutz**
+      findest Du auf dem [Familienportal](https://familienportal.de/familienportal/familienleistungen/mutterschutz)."
   utter_ask_permission_familydescription:
-  - text: Am besten kann ich Dich dazu beraten, wenn Du mir etwas  über Dich erzählst.
-      Einverstanden? 🤓
+  - text: "Am besten kann ich Dich dazu beraten, wenn Du mir etwas  über Dich erzählst.
+      Einverstanden? 🤓"
   utter_ask_familydescription:
-  - text: Ok! Bitte beschreibe mir kurz Deine Familiensituation.
+  - text: "Ok! Bitte beschreibe mir kurz Deine Familiensituation."
   utter_ask_familydescription_parent:
-  - text: Spreche ich mit der Mutter oder dem Vater?
+  - text: "Spreche ich mit der Mutter oder dem Vater?"
   utter_ask_familydescription_pregnancy_month:
-  - text: Bist Du schwanger? Wenn ja, in welchem Monat?
+  - text: "Bist Du schwanger? Wenn ja, in welchem Monat?"
   utter_recommend_elterngeld:
-  - text: Super, danke! Als werdende(r) {familydescription_parent} könnte auch **Elterngeld**
-      für Dich interessant sein.
+  - text: "Super, danke! Als werdende(r) {familydescription_parent} könnte auch **Elterngeld**
+      für Dich interessant sein."
   utter_ask_elterngeld_priorknowledge:
-  - text: Hast Du Dich damit schon beschäftigt?
+  - text: "Hast Du Dich damit schon beschäftigt?"
   utter_elternzeit_inform_deadline:
-  - text: Falls Dein Partner direkt ab der Geburt **Elternzeit** nehmen möchte, müsst
-      Ihr das in den nächsten 2 Wochen anmelden.
+  - text: "Falls Dein Partner direkt ab der Geburt **Elternzeit** nehmen möchte, müsst
+      Ihr das in den nächsten 2 Wochen anmelden."
   utter_ask_elternzeit_priorknowledge:
-  - text: Hast Du Dich schon über Elternzeit informiert?
+  - text: "Hast Du Dich schon über Elternzeit informiert?"
   utter_elternzeit_inform:
-  - text: 'Elternzeit ist eine **unbezahlte Pause** vom Berufsleben, die Du zur Betreuung
+  - text: "Elternzeit ist eine **unbezahlte Pause** vom Berufsleben, die Du zur Betreuung
       Deines Kindes nehmen kannst. Startzeitpunkt und Dauer musst Du bei Deinem Arbeitgeber
-      anmelden 🤓 '
+      anmelden 🤓"
   utter_ask_elternzeit_subtopic:
   - buttons:
     - payload: /choose_elternzeit_requirements
-      title: Voraussetzungen
+      title: "Voraussetzungen"
     - payload: /choose_elternzeit_notification
-      title: Anmeldung
+      title: "Anmeldung"
     - payload: /choose_elternzeit_duration
-      title: Bezugsdauer
-    text: Möchtest Du noch etwas zu Voraussetzungen, Anmeldung oder Bezugsdauer wissen?
+      title: "Bezugsdauer"
+    text: "Möchtest Du noch etwas zu Voraussetzungen, Anmeldung oder Bezugsdauer wissen?"
   utter_elternzeit_timepartner:
-  - text: Ja, für Mütter beginnt die **Elternzeit** frühestens nach dem Ende der **Mutterschutzfrist**.
-      Also hast Du noch genug Zeit bis zur Anmeldung 🐢
+  - text: "Ja, für Mütter beginnt die **Elternzeit** frühestens nach dem Ende der **Mutterschutzfrist**.
+      Also hast Du noch genug Zeit bis zur Anmeldung 🐢"
   utter_elternzeit_reply_outofscope:
-  - text: Aber schau doch mal hier auf dem [🔗 Familienportal](https://familienportal.de/familienportal/familienleistungen/elternzeit/faq/wann-und-wie-muss-ich-elternzeit-beantragen-/124810).
-actions:
-- ->
+  - text: "Aber schau doch mal hier auf dem [🔗 Familienportal](https://familienportal.de/familienportal/familienleistungen/elternzeit/faq/wann-und-wie-muss-ich-elternzeit-beantragen-/124810)."
+
 forms:
 - elterngeldrequirements_form
 - familydescription_form
