--- a/domain.yml
+++ b/domain.yml
@@ -53,25 +53,6 @@ slots:
     type: unfeaturized
   elterngeld_residence:
     type: unfeaturized
-    # type: text
-    # type: categorical
-    # values:
-    # - Baden-Württemberg
-    # - Bayern
-    # - Berlin
-    # - Brandenburg
-    # - Bremen
-    # - Hamburg
-    # - Hessen
-    # - Mecklenburg-Vorpommern
-    # - Niedersachsen
-    # - Nordrhein-Westfalen
-    # - Rheinland-Pfalz
-    # - Saarland
-    # - Sachsen
-    # - Sachsen-Anhalt
-    # - Schleswig-Holstein
-    # - Thüringen 
   familydescription_pregnancy_month:
     type: unfeaturized
   familydescription_parent:
@@ -109,18 +90,11 @@ responses:
   utter_ask_knowmore:
     - text: "Willst Du mehr darüber wissen? Du kannst mich auch etwas anderes fragen."
   utter_outofscope:
-    - text: "Sorry, das kann ich Dir leider noch nicht beantworten. Ich habe auch noch einiges zu lernen 🤓📚 "
-    - text: "Das kann ich Dir leider noch nicht beantworten."
-    - text: "Die Details dazu kenne ich leider noch nicht 🙈"  
+    - text: "Ich kenne mich bisher nur mit **Mutterschutz**, **Elterngeld** und **Elternzeit** aus. \n 
+        Weitere Leistungen findest Du [🔗 hier](https://familienportal.de/familienportal/familienleistungen/familienleistungen-ueberblick)🤓📚 "
   utter_more_info:
     - text: "Du hast Dich zuletzt nach **Mutterschutz** erkundigt. Es gibt noch viele weitere Familienleistungen, die für Dich relevant sein könnten."
   # elterngeld
-  # utter_elterngeld_slots:
-  # - text: "Sie haben folgende Angaben gemacht: \n
-  #           - care: {elterngeld_care}\n
-  #           - samehousehold: {elterngeld_samehousehold}\n
-  #           - workparttime: {elterngeld_workparttime}\n
-  #           - livegermany: {elterngeld_residence}"
   utter_elterngeld_precise_general:
   - text: Hast Du eine konkrete Frage zum **Elterngeld**? Oder soll ich Dir erstmal ein
       paar allgemeine Infos dazu geben?
@@ -132,9 +106,8 @@ responses:
   utter_ask_elterngeld_precisequestion:
   - text: Dann stelle jetzt Deine Frage.
   utter_elterngeld_reply_outofscope:
-  - text: "Mehr Infos zu **Elterngeld**
-      findest Du auf dem [Familienportal](https://familienportal.de/familienportal/familienleistungen/elterngeld/faq)."
-  - text: "In der Zwischenzeit findest Du mehr Infos zum **Elterngeld** auf dem [🔗 Familienportal](https://familienportal.de/familienportal/familienleistungen/elterngeld/faq)."
+  - text: "Du willst noch mehr dazu wissen? \n
+      Das freut mich zu hören. Schau gerne mal [🔗 hier](https://familienportal.de/familienportal/familienleistungen/elterngeld/faq) vorbei."
   utter_elterngeld_inform:
   - text: "**Elterngeld** ist eine Leistung, die Du vom Staat als Unterstützung erhalten
       kannst, wenn Du nach der Geburt Deines Kindes gar nicht oder weniger arbeitest 🤓"
@@ -203,6 +176,9 @@ responses:
   # - text: "Da Du in {elterngeld_residence} wohnst, kannst Du den Elterngeldantrag [🔗  hier](https://www.l-bank.de/produkte/familienfoerderung/elterngeld.html) digital ausfüllen. Anschließend musst Du ihn ausdrucken und an Deine Elterngeldstelle schicken. Deine Elterngeldstelle findest Du [🔗 hier](https://familienportal.de/action/familienportal/125008/action/suche)."
 
   # mutterschutz
+  utter_mutterschutz_inform:
+  - text: "**Mutterschutz** ist ein besonderer Schutz für Arbeitnehmerinnen, die schwanger sind oder ein Kind stellen.\n
+    Vor und nach der Geburt soll damit Mutter als auch Kind geschützt werden."
   utter_ask_mutterschutz_question:
   - text: "Es sieht aus, als hast Du Dich gerade mit dem Thema **Mutterschutz** beschäftigt. \n
       Wähle eine Beispielfrage aus oder schreib' mir direkt Deine Frage."
@@ -217,8 +193,8 @@ responses:
   utter_mutterschutz_periodreply:
   - text: "Der Zeitraum beginnt **6 Wochen vor** dem errechneten Geburtstermin und endet üblicherweise **8 Wochen nach** der Geburt 📅"
   utter_mutterschutz_reply_outofscope:
-    - text: Das kann ich Dir leider noch nicht beantworten. Mehr Infos zu **Mutterschutz**
-        findest Du auf dem [Familienportal](https://familienportal.de/familienportal/familienleistungen/mutterschutz).
+    - text: "Du willst noch mehr dazu wissen? \n
+        Das freut mich zu hören. Schau gerne mal [🔗 hier](https://familienportal.de/familienportal/familienleistungen/mutterschutz) vorbei."
   utter_ask_permission_familydescription:
     - text: "Am besten kann ich Dich dazu beraten, wenn Du mir etwas  über Dich erzählst. Einverstanden? 🤓"
   utter_ask_familydescription:
@@ -252,7 +228,9 @@ responses:
   utter_elternzeit_timepartner:
     - text: "Ja, für Mütter beginnt die **Elternzeit** frühestens nach dem Ende der **Mutterschutzfrist**. Also hast Du noch genug Zeit bis zur Anmeldung 🐢"
   utter_elternzeit_reply_outofscope:
-    - text: "Aber schau doch mal hier auf dem [🔗 Familienportal](https://familienportal.de/familienportal/familienleistungen/elternzeit/faq/wann-und-wie-muss-ich-elternzeit-beantragen-/124810)."
+    - text: "Du willst noch mehr dazu wissen? \n
+        Das freut mich zu hören. 
+        Schau gerne mal [🔗 hier](https://familienportal.de/familienportal/familienleistungen/elternzeit/faq/wann-und-wie-muss-ich-elternzeit-beantragen-/124810) vorbei."
   
 
 
